Primer commit en serio
Hecho:
 - Controles basicos del hornerito.
 - Carga las plataformas que sirven de piso para el hornerito.

TODO:
 - Que el hornero pueda agarrar palos y que pueda entrar a la casita teniendo los palos necesarios encima.
 - Paredes a los constados para que el hornero no se pueda caer del mapa por boludo.
 - Todo el tema del equilibrio.
 - El menu principal que se va a hacer a lo ultimo
 - Poner los sprites correctos de las cosas

--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <!-- Librerias -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="libraries/matter.min.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/p5.sound.min.js"></script>
+  <script language="javascript" type="text/javascript" src="libraries/planck.min.js"></script>
+  <script language="javascript" type="text/javascript" src="libraries/p5play.min.js"></script>
+  <!-- Principal del sketch (main) -->
+  <script language="javascript" type="text/javascript" src="hornero_palitos.js"></script>
   <!-- Cosas del juego -->
   <script language="javascript" type="text/javascript" src="juego/hornero.js"></script>
-  <script language="javascript" type="text/javascript" src="juego/mapa.js"></script>
   <script language="javascript" type="text/javascript" src="juego/palito.js"></script>
   <script language="javascript" type="text/javascript" src="juego/plataforma.js"></script>
   <script language="javascript" type="text/javascript" src="juego/casita.js"></script>
   <script language="javascript" type="text/javascript" src="juego/barro.js"></script>
-  <!-- Principal del sketch (main) -->
-  <script language="javascript" type="text/javascript" src="hornero_palitos.js"></script>
+  <script language="javascript" type="text/javascript" src="juego/mapa.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <style>
