--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script language="javascript" type="text/javascript" src="juego/casita.js"></script>
   <script language="javascript" type="text/javascript" src="juego/barro.js"></script>
   <script language="javascript" type="text/javascript" src="juego/mapa.js"></script>
+  <script language="javascript" type="text/javascript" src="juego/utils/imagen.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <style>
